--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,40 @@
 test_progetto
+esempi_e_altri_file_usati_a_lezione
+kcomp
+parser.cpp
+parser.hpp
+scanner.cpp
+scanner.hpp
+
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
